feat: can now specify composition when creating deck
